syntax = "proto3";

package config.v1;

import "buf/validate/validate.proto";
import "github.com/kralicky/codegen/cli/cli.proto";
import "github.com/aity-cloud/monty/pkg/apis/core/v1/core.proto";
import "github.com/aity-cloud/monty/pkg/config/v1/gateway_config.proto";
import "github.com/aity-cloud/monty/pkg/plugins/driverutil/types.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";

option go_package      = "github.com/aity-cloud/monty/pkg/config/v1;configv1";
option (cli.generator) = {
  enabled: true,
};

// Gateway configuration management
service GatewayConfig {
  option (cli.command_group) = {
    use: "config",
  };

  rpc GetDefaultConfiguration(driverutil.GetRequest) returns (GatewayConfigSpec) {
    option (cli.command) = {
      use: "get-default",
    };
    option (google.api.http) = {
      get: "/configuration/default",
    };
  }
  rpc SetDefaultConfiguration(SetRequest) returns (google.protobuf.Empty) {
    option (cli.command) = {
      use:         "set-default",
      granularity: EditMessage,
    };
    option (google.api.http) = {
      put:  "/configuration/default",
      body: "*",
    };
  }
  rpc GetConfiguration(driverutil.GetRequest) returns (GatewayConfigSpec) {
    option (cli.command) = {
      use: "get",
    };
    option (google.api.http) = {
      get: "/configuration",
    };
  }
  rpc SetConfiguration(SetRequest) returns (google.protobuf.Empty) {
    option (cli.command) = {
      use:         "set",
      granularity: EditMessage,
    };
    option (google.api.http) = {
      put:  "/configuration",
      body: "*",
    };
  }
  rpc ResetDefaultConfiguration(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (cli.command) = {
      use: "reset-default",
    };
    option (google.api.http) = {
      post: "/configuration/default/reset",
    };
  }
  rpc ResetConfiguration(ResetRequest) returns (google.protobuf.Empty) {
    option (cli.command) = {
      use:         "reset",
      granularity: EditMessage,
    };
    option (google.api.http) = {
      post: "/configuration/reset",
      body: "*",
    };
  }
  rpc DryRun(DryRunRequest) returns (DryRunResponse) {
    option (cli.command).skip = true;
    option (google.api.http) = {
      post: "/dry-run",
      body: "*",
    };
  }
  rpc ConfigurationHistory(driverutil.ConfigurationHistoryRequest) returns (HistoryResponse) {
    option (cli.command) = {
      use: "history",
    };
    option (google.api.http) = {
      get: "/configuration/history",
    };
  }
  rpc WatchReactive(core.ReactiveWatchRequest) returns (stream core.ReactiveEvents) {
    option (cli.command) = {
      use: "watch",
    };
    option (google.api.http) = {
      get:  "/configuration/watch",
      body: "*",
    };
  }
}

message SetRequest {
  GatewayConfigSpec spec = 1;
}

message ResetRequest {
  core.Revision             revision = 1 [(cli.flag_set).no_prefix = true];
  google.protobuf.FieldMask mask     = 2 [(cli.flag).skip = true];
  GatewayConfigSpec         patch    = 3 [(cli.flag).skip = true];
}

message DryRunRequest {
  driverutil.Target target = 1;
  driverutil.Action action = 2;

  GatewayConfigSpec spec = 3; // Set

  core.Revision             revision = 4; // Reset
  GatewayConfigSpec         patch    = 5; // Reset
  google.protobuf.FieldMask mask     = 6 [(cli.flag).skip = true]; // Reset
}

message DryRunResponse {
  GatewayConfigSpec       current          = 1;
  GatewayConfigSpec       modified         = 2;
  buf.validate.Violations validationErrors = 3;
}

message HistoryResponse {
  repeated GatewayConfigSpec entries = 1;
}
